# yodelkey

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
app/: app.py  check.py  words.txt
app/templates/: index.html
