[project]
name = "sharekey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.122.0",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN201", "INP001"]